# UCPP

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  decoder.cpp  file_service.cpp  file_service.h  lexer.cpp  lexer.h  lexer_test.cpp  main.cpp  parser.cpp  preprocessor.cpp  preprocessor.h  token.h  types.h  vcpkg.json
src/: file_service.cpp  lexer.cpp  main.cpp  preprocessor.cpp  preprocessor.h  scope_guard.h
